--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,4 @@
 error.validation = There are validation error(s).
-description.maxsize=The description must not exceed {max} characters.
-email.notblank=The email address must not be blank.
-email.invalid=The email address is not valid.
+description.maxsize=The description must have {min} to {max} characters.
+email.invalid=The email address must be valid.
 name.notblank=The name must not be blank.
