--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 error.validation = There are validation error(s).
 description.maxsize=The description must have {min} to {max} characters.
 email.invalid=The email address must be valid.
+email.duplicate=The email address is already in use.
 name.notblank=The name must not be blank.
