feat: adding generic unique validator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ description.maxsize=The description must have {min} to {max} characters.
 email.invalid=The email address must be valid.
 email.duplicate=The email address is already in use.
 name.notblank=The name must not be blank.
+uniquevalue=Value must be unique.
